--- a/shop.html
+++ b/shop.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 
 <!-- 
-  Theme Name: Black
-  Theme URL: https://probootstrap.com/black-free-html5-multi-purpose-website-template
-  Author: ProBootstrap.com
-  Author URL: https://probootstrap.com
-  License: Released for free under the Creative Commons Attribution 3.0 license (probootstrap.com/license)
+  WEBSURF
 -->
 <html lang="en">
   <head>
